--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -42,8 +42,6 @@ body {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important;
     -webkit-font-smoothing: subpixel-antialiased;
     text-rendering: optimizeLegibility;
-    font-size: 2.2em !important;
-    padding: 1.6em;
 }
 
 .container {
@@ -490,7 +488,7 @@ header .sitename {
 	#bodyContent .tuto-items-details-container-left {
 	    float: left;
 	    margin-right: 10px;
-	    position: unset;
+	    position: relative !important;
 	}
 
 	#bodyContent .tuto-items-details-container-right {
