--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -477,9 +477,10 @@ header .sitename {
 		border-radius: 0;
 	}
 	#bodyContent .tuto-items-container .tuto-items-details-container {
-		    background: #fff !important;
+		    background: #f9f9f9 !important;
 		    float: left;
 		    width: auto;
+		    font-size: 17px;
 		    border: 2px solid #aaa;
 			-webkit-print-color-adjust: exact;
 			margin-right:10px;
@@ -529,7 +530,7 @@ header .sitename {
 		border-top: none;
 	}
 	#bodyContent .tuto-items-container {
-		margin-top: 25px
+		margin-top: 5px
 	}
 	#bodyContent .printMainTitle {
 		margin-top: -113px;
