--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -87,8 +87,8 @@ header .sitename {
     float: left;
 }
 
-
-#main-content-header .maincontent-header-tail {
+#main-content-header .maincontent-header-tail,
+.bg-halfsquare-separator, .bg-halfsquare-separator-2, .bg-halfsquare-separator-3 {
     display: none;
 }
 
