don't crop images in print

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -226,6 +226,12 @@ header .sitename {
     position: relative;
 }
 
+img {
+    page-break-before: auto;
+    page-break-after: auto;
+    page-break-inside: avoid;
+}
+
 .book-main-banner img {
     position: absolute;
     left: 50%;
