--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -70,20 +70,21 @@ footer .pagenum {
 
 .dokit-manual-print-banner {
     height: 300px;
-    background: #000;
-    -webkit-print-color-adjust: exact;
+    background: #000 !important;
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 10px;
+    -webkit-print-color-adjust: exact;
 }
 
 .dokit-manual-print-banner img {
 	object-fit: cover;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     opacity: 0.5;
-    -webkit-print-color-adjust: exact;
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
   	filter: blur(5px);
+  	border-radius: 10px;
+    -webkit-print-color-adjust: exact;
 }
 
 .dokit-manual-print-logo {
@@ -95,13 +96,19 @@ footer .pagenum {
     -webkit-print-color-adjust: exact;
 }
 
+h1.booktitle {
+	font-size: 4em;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+
 .dokit-manual-print-logo img {
 	object-fit: cover;
-    width: 100%;
-    -webkit-print-color-adjust: exact;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5) !important;
+    -webkit-print-color-adjust: exact;
 }
 
 header {
