print style fix

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -102,7 +102,7 @@ h1.booktitle {
 }
 
 .dokit-manual-print-logo img {
-	object-fit: cover;
+	object-fit: contain;
     min-width: 100%;
     min-height: 100%;
     border-radius: 10px;
@@ -110,6 +110,7 @@ h1.booktitle {
     -webkit-print-color-adjust: exact;
     display: block;
     position: relative;
+    background: #fff !important;
 }
 
 header {
