--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -69,16 +69,19 @@ footer .pagenum {
 }
 
 .dokit-manual-print-banner {
+    border-radius: 10px;
+    opacity: 0.9;
+    width:  100%;
+    height: 300px;
+    position: relative;
+	width: 200px;
+	height: 200px;
+	overflow: hidden;
+    -webkit-print-color-adjust: exact;
+    overflow: hidden;
     background: #000 !important;
     border-radius: 10px;
-    -webkit-print-color-adjust: exact;
-    height: 300px;
-    overflow: hidden;
-    opacity: 0.9;
-    position: absolute;
-    left: 0;
-    top: 50px;
-    width: 100%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5) !important;
 }
 
 .dokit-manual-print-banner img {
@@ -86,51 +89,47 @@ footer .pagenum {
     filter: alpha(opacity=50);
     border-radius: 10px;
     -webkit-print-color-adjust: exact;
-    width: 100%;
-    height: -webkit-fill-available;
-    position: absolute;
-    object-fit: cover;
-    left: 50%;
-    z-index: -1;
-    top: 50%;
-    -webkit-transform: translateY(-50%) translateX(-50%);
-    -ms-transform: translateY(-50%) translateX(-50%);
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	height: auto;
+	width: auto;
+	-webkit-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	-webkit-print-color-adjust: exact;
 }
 
 .dokit-manual-print-logo {
     width: 300px;
     height: 300px;
-    background: red;
-    margin: auto;
     position: relative;
+	width: 200px;
+	height: 200px;
+	overflow: hidden;
     -webkit-print-color-adjust: exact;
     overflow: hidden;
-    top: 150px;
     background: #fff !important;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5) !important;
-    -webkit-print-color-adjust: exact;
+}
+
+.dokit-manual-print-logo img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: auto;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  -webkit-print-color-adjust: exact;
 }
 
 h1.booktitle {
 	font-size: 60px;
     font-weight: bold;
     margin-bottom: 25px;
-}
-
-.dokit-manual-print-logo img {
-    min-width: 100%;
-    min-height: 100%;
-    display: block;
-    position: relative;
-    width: 100%;
-    height: -webkit-fill-available;
-    position: absolute;
-    object-fit: cover;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translateY(-50%) translateX(-50%);
-    -ms-transform: translateY(-50%) translateX(-50%);
 }
 
 header {
