--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -69,43 +69,40 @@ footer .pagenum {
 }
 
 .dokit-manual-print-banner {
-    border-radius: 10px;
     opacity: 0.9;
-    width:  100%;
+    width: 100%;
     height: 300px;
     position: relative;
-	width: 200px;
-	height: 200px;
-	overflow: hidden;
+    width: 100%;
+    height: 300px;
     -webkit-print-color-adjust: exact;
     overflow: hidden;
     background: #000 !important;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5) !important;
+    top: -50px;
 }
 
 .dokit-manual-print-banner img {
     opacity: 0.5;
     filter: alpha(opacity=50);
     border-radius: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-height: 100%;
+    width: 100%;
+    height: auto;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
     -webkit-print-color-adjust: exact;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	height: auto;
-	width: auto;
-	-webkit-transform: translate(-50%,-50%);
-	-ms-transform: translate(-50%,-50%);
-	transform: translate(-50%,-50%);
-	-webkit-print-color-adjust: exact;
 }
 
 .dokit-manual-print-logo {
     width: 300px;
     height: 300px;
     position: relative;
-	width: 200px;
-	height: 200px;
+	margin: -100px auto;
 	overflow: hidden;
     -webkit-print-color-adjust: exact;
     overflow: hidden;
