--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -159,7 +159,7 @@ header .sitename {
 }
 
 #main-content-header .firstHeading {
-    font-size: 1.7em;
+    font-size: 2.2em;
     text-align: left;
     width: 100%;
     border-bottom: 0px;
@@ -167,6 +167,15 @@ header .sitename {
     margin: 0;
     padding: 10px 0;
     float: left;
+}
+
+.page .h2 {
+	font-size: 1.7em;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 7px;
+    display: block;
+    float: left;
+    width: 100%;
 }
 
 #mw-content-text .mw-pt-translate-header + hr {
