--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -124,8 +124,6 @@ footer .pagenum {
   -ms-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
   -webkit-print-color-adjust: exact;
-  min-height: 100%;
-  min-width: 100%;
 }
 
 h1.booktitle {
@@ -165,12 +163,16 @@ header .sitename {
 
 .attach-link-table,
 .attach-link-table:first-child{
-	border: 0;
-	padding: 5px 0;
+    border: 0 !important;
+    padding: 5px 0 !important;
+}
+
+.hrContentMinor-2 {
+	margin:0 !important;
 }
 
 #main-content-header .firstHeading {
-    font-size: 2.2em;
+    font-size: 2.4em;
     text-align: left;
     width: 100%;
     border-bottom: 0px;
