Fixing print.less

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -313,6 +313,7 @@ img {
     page-break-before: auto;
     page-break-after: auto;
     page-break-inside: avoid;
+    height: auto !important;
 }
 
 .book-main-banner img {
