Fixing icon colors on print

--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -208,19 +208,15 @@ header .sitename {
     background: #f9f9f9 !important;
 }
 
-.icon-instructions.dont-icon .icon-instructions-icon {
-    color:#000 !important;
-}
-
 .icon-instructions.caution-icon {
     background-color: #fff7f7 !important;
 }
 
-.icon-instructions.caution-icon .icon-instructions-icon {
+.icon-instructions.caution-icon *:before, .icon-instructions.caution-icon *:after {
     color:#db0001 !important;
 }
 
-.icon-instructions.pin-icon .icon-instructions-icon {
+.icon-instructions.pin-icon *:before, .icon-instructions.pin-icon *:after {
     color:#777 !important;
 }
 
@@ -228,7 +224,7 @@ header .sitename {
     background-color: #fffcef !important;
 }
 
-.icon-instructions.idea-icon .icon-instructions-icon {
+.icon-instructions.idea-icon *:before, .icon-instructions.idea-icon *:after {
     color:#c6a701 !important;
 }
 
@@ -236,7 +232,7 @@ header .sitename {
     background-color: rgba(58, 163, 227, 0.08) !important;
 }
 
-.icon-instructions.info-icon .icon-instructions-icon {
+.icon-instructions.info-icon *:before, .icon-instructions.info-icon *:after {
     color:#3aa3e3 !important;
 }
 
