--- a/resources/styles/print.less
+++ b/resources/styles/print.less
@@ -216,6 +216,10 @@ header .sitename {
     color:#db0001 !important;
 }
 
+.h2, .h3, .h4, .h5, .h6 {
+	display:block;
+}
+
 .icon-instructions.pin-icon *:before, .icon-instructions.pin-icon *:after {
     color:#777 !important;
 }
